--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "movie-review",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "mongodb": "^6.16.0"
-  }
+	"name": "movie-review",
+	"version": "1.0.0",
+	"main": "index.js",
+	"type": "module",
+	"engines": {
+		"node": "22.15.0"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.5.0",
+		"express": "^4.18.2",
+		"mongodb": "^6.16.0"
+	}
 }
